# jumpnbump

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  ChangeLog  README.md
.github/workflows/: clang-format-check.yml  cmake.yml
data/: CMakeLists.txt
docs/: jumpnbump.html
modify/: gobpack.c  jnbpack.c
src/: CMakeLists.txt
src/game/: CMakeLists.txt  main.c  menu.c  network.c  network.h
src/include/: CMakeLists.txt  dj.h  filter.h  globals.h.in
src/sdl/: CMakeLists.txt  gfx.c  input.c  interrpt.c  sound.c
src/tools/: CMakeLists.txt  gobpack.c  jnbpack.c  jnbunpack.c
